--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
         <div class="container">
         <ul class="photo-list">
             <li class="photo-list-item">
-                <img class="photo-list-img" src="/img/1.png" alt="Something went wrong" width="419px" height="280px">
+                <img class="photo-list-img" src="img/1.png" alt="Something went wrong" width="419px" height="280px">
                 <p class="photo-list-pretitle">LIFESTYLE</p>
                 <h3 class="photo-list-title">More than just a music festival </h3>
                 <p class="photo-list-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
             </li>
             <li class="photo-list-item">
-                <img class="photo-list-img" src="/img/2.png" alt="Something went wrong" width="419px" height="280px">
+                <img class="photo-list-img" src="img/2.png" alt="Something went wrong" width="419px" height="280px">
                 <p class="photo-list-pretitle">LIFESTYLE</p>
                 <h3 class="photo-list-title">Life tastes better with coffee</h3>
                 <p class="photo-list-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
             </li>
             <li class="photo-list-item">
-                <img class="photo-list-img" src="/img/3.png" alt="Something went wrong" width="419px" height="280px">
+                <img class="photo-list-img" src="img/3.png" alt="Something went wrong" width="419px" height="280px">
                 <p class="photo-list-pretitle">PHOTODIARY</p>
                 <h3 class="photo-list-title">American dream</h3>
                 <p class="photo-list-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
             </li>
             <li class="photo-list-item">
-                <img class="photo-list-img" src="/img/4.png" alt="Something went wrong" width="419px" height="280px">
+                <img class="photo-list-img" src="img/4.png" alt="Something went wrong" width="419px" height="280px">
                 <p class="photo-list-pretitle">PHOTODIARY</p>
                 <h3 class="photo-list-title">A day exploring the Alps</h3>
                 <p class="photo-list-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
             </li>
             <li class="photo-list-item">
-                <img class="photo-list-img" src="/img/5.png" alt="Something went wrong" width="419px" height="280px">
+                <img class="photo-list-img" src="img/5.png" alt="Something went wrong" width="419px" height="280px">
                 <p class="photo-list-pretitle">LIFESTYLE</p>
                 <h3 class="photo-list-title">Top 10 song for running</h3>
                 <p class="photo-list-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
             </li>
             <li class="photo-list-item">
-                <img class="photo-list-img" src="/img/6.png" alt="Something went wrong" width="419px" height="280px">
+                <img class="photo-list-img" src="img/6.png" alt="Something went wrong" width="419px" height="280px">
                 <p class="photo-list-pretitle">LIFESTYLE</p>
                 <h3 class="photo-list-title">Cold winter days</h3>
                 <p class="photo-list-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
